--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,14 @@ section {
     border-color: #39a6b2;
   }
 
+  .text-left {
+      text-align: left;
+  }
+
+  text-right {
+      text-align: right;
+  }
+
 /*Hero Style Start */
 .hero {
     background-image: url("../images/hero-bg.jpeg");
@@ -190,3 +198,45 @@ section {
 
 
 /* Steps Style End */
+
+/* trainers style start */
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 30%;
+    float: left;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 60%;
+}
+
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
+}
+/* trainers stye end */
