--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,6 @@ header nav ul li a {
 
 footer {
     background: #fce138;
-    width: 100%;
     padding: 40px 35px;
     display: flex;
     justify-content: space-between;
@@ -77,10 +76,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
   }
   
   .primary-border {
@@ -91,13 +91,6 @@ section {
     border-color: #39a6b2;
   }
 
-  .text-left {
-      text-align: left;
-  }
-
-  text-right {
-      text-align: right;
-  }
 
 /*Hero Style Start */
 .hero {
@@ -169,9 +162,7 @@ section {
 
 
 /*Intro Style Start */
-.intro {
-    text-align: center;
-}
+
 
 
 
@@ -181,39 +172,65 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 /* Intro Style End */
 
 /* Steps Style Start */
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
-.steps div {
-    margin-bottom: 80px;
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
 
-.steps h3 {
-    ccolor: #024e76;
+.step h3 {
+    color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;
 }
 
-.steps p {
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img img {
+    mad-width: 100%;
+}
+
+.step-text {
+    flex: 12;
+}
+
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+}
+
+.step-text p {
     color: #39a6b2;
-    font-size: 23px;
+    font-size: 18px;
 }
 
-.steps span {
-    font-size: 38px;
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
+
 
 
 
@@ -221,7 +238,7 @@ section {
 
 /* trainers style start */
 .trainers {
-    text-align: center;
+
 }
 
 .trainer {
@@ -263,7 +280,6 @@ section {
 
 /*contact style start*/
 .contact {
-    text-align: center;
     background: #024e76;
   }
   
@@ -303,3 +319,16 @@ section {
   }
 
 /* contact style end */
+
+
+.text-left {
+    text-align: left;
+}
+
+text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
+}
