--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,21 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
+}
+
+
+
+header a {
+    color: #fce138;
+    text-decoration: none;
 }
 
 header h1 {
@@ -21,11 +36,7 @@ header h1 {
     font-size: 36px; 
     color: #fce138;
     margin: 0;
-}
-
-header a {
-    color: #fce138;
-    text-decoration: none;
+    text-shadow: 0 0 10px rgba (0, 0, 0, 0.5);
 }
 
 header nav {
@@ -44,6 +55,14 @@ header nav ul li a {
     padding: 10px 15px; 
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 footer {
@@ -101,6 +120,8 @@ section {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
   }
 
   .hero-cta {
@@ -116,17 +137,20 @@ section {
       font-style: italic;
       font-size: 55px;
       color: #fce138;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 
 .hero-form {
     color: #024e76; 
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, .8);
     padding: 20px;
     border-style: solid;
     border-width: 3px;
+    border-radius: 15px;
     border-color: #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form h3 {
@@ -140,12 +164,19 @@ section {
 
 .form-input {
     border: 1px solid #024e76;
+    border-radius: 10px;
     display: block;
     padding:7px 15px; 
     font-size: 16px;
     color: #024e76;
     width: 90%;
     margin-bottom: 15px;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 
 .hero-form label {
@@ -156,8 +187,13 @@ section {
     background-color: #024e76;
     color: #fce138;
     border: none;
+    border-radius: 10px;
     padding: 10px 20px;
     font-size: 16px;
+}
+
+.hero-form button:hover {
+    background: #39a6b2;
 }
 /*Hero Style End */
 
@@ -187,13 +223,15 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
 
+.step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
+}
 
 .step h3 {
     color: #024e76;
@@ -325,6 +363,7 @@ section {
 
   .contact-form input, .contact-form textarea {
       border: 1px solid #024e76;
+      border-radius: 10px;
       display: block;
       padding: 7px 15px;
       font-size: 16px;
@@ -332,16 +371,28 @@ section {
       width: 90%;
       margin-bottom: 15px;
       margin-top: 5px;
+      background-color: rgba(255, 255, 255, 0.75);
+  }
+
+  .contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
   }
 
   .contact-form button {
       width: 100%;
       border: none;
+      border-radius: 10px;
       background: #fce138;
       color: #024e76;
       text-align: center;
       padding: 15px 0;
       font-size: 16px;
+  }
+
+  .contact-form button:hover {
+      color: #fce138;
+      background: #39a6b2;
   }
 
 /* contact style end */
@@ -363,6 +414,7 @@ text-right {
     header {
       padding-bottom: 0;
       justify-content: center;
+      position: relative;
     }
   
     header h1 {
